--- a/components/Input/CopyField.css
+++ b/components/Input/CopyField.css
@@ -20,6 +20,6 @@
     height: 18px;
 }
 
-p {
+.copyField p {
     text-align: right;
 }
